2009-05-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Adding a toolbar for common LaTeX format topics.


2009-04-17  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Set undo points for better redo/undo on inserting formatings.
 * Make reference type inside insert reference dialog accessible by
   keyboard.


2009-04-12  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added some new lines into latex beamer template.


2009-04-10  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Sort entries on insert reference dialog by alphabet.


2009-03-30  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Moved replacement functions into their own submenu.
 * Added key bindings for formatting text with bold, italic and typewriter
   font face.


2009-03-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Use a text field with pull down instead of a normal combo box for
   font size at LaTeX wizard.


2009-03-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * doc/geanylatex.tex: Added documentation written in LaTeX.


2009-03-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Replace \u-UTF-8 letters by octal coded chars. Huge thanks to
   Dominic Hopf for providing patch and fighting that fight.
 * Added a menu entry for bulk replace function and fixed a segfault at
   replacing


2009-03-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added a function to bulk replace special characters
   inside marked text by keybinding


2009-03-13  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Don't offer insert environment dialog in case of no document is open.


2009-03-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Insert environment now supports selections by position \begin{} and
   \end{} around


2009-02-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Don't react on some keybindings in case of no document is open.
 * Added a feature for easy inserting environments to document.